update in alignment issues

--- a/jessy-cabs/src/component/Bookings/BookingMain/Booking/Booking.css
+++ b/jessy-cabs/src/component/Bookings/BookingMain/Booking/Booking.css
@@ -13,7 +13,7 @@
 }
 
 .form-container-booking .booking-form {
-  width: 100%;
+  /* width: 100%; */
   overflow-x: hidden;
   display: flex;
   flex-direction: column;
