--- a/jessy-cabs/src/component/Info/RateManagement/PackageRateEntery/PackageRateEntery.css
+++ b/jessy-cabs/src/component/Info/RateManagement/PackageRateEntery/PackageRateEntery.css
@@ -16,7 +16,7 @@
 
 .form-container-PackageRateEntery .PackageRateEntery-form {
     height: 100vh;
-    width: 100vw;
+    /* width: 100vw; */
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
