--- a/jessy-cabs/src/component/Settings/MainSetting/Organization/Organization.css
+++ b/jessy-cabs/src/component/Settings/MainSetting/Organization/Organization.css
@@ -11,7 +11,7 @@
 
 .main-setting-main .organisation-form {
     height: 70vh;
-    width: 100vw;
+    /* width: 100vw; */
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
