--- a/jessy-cabs/src/component/UserSettings/UserInfo/UserInfo.css
+++ b/jessy-cabs/src/component/UserSettings/UserInfo/UserInfo.css
@@ -15,7 +15,7 @@
 
 .form-container-UserSettings .userinfo-form {
     height: 70vh;
-    width: 100vw;
+    /* width: 100vw; */
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
